--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "path": "^0.12.7",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
